--- a/tufts_halligan/maps/real/2/poi_name_locator_locations.yaml
+++ b/tufts_halligan/maps/real/2/poi_name_locator_locations.yaml
@@ -1,111 +1,136 @@
-elevator:
-  x: -2.01373639665
-  y: 11.7014959602
+245_Main_Office:
+  x: -3.3055
+  y: 1.7089
 
-elevator_adjacent_foyer:
-  x: -0.437290137808
-  y: 10.8503276132
+245_Sitting_Area:
+  x: -1.1599
+  y: 2.5497
 
-foyer_adjacent_elevator:
-  x: -0.798016688696
-  y: 8.47443332346
+202_Graduate_Offices:
+  x: 2.0554
+  y: 5.8229
 
-foyer_adjacent_hall1:
-  x: -0.650719323467
-  y: 6.51777247512
+204_Kitchenette:
+  x: 4.4648
+  y: 6.7463
 
-foyer_adjacent_rm245_main_office:
-  x: -5.03024698298
-  y: 1.25530134025
+205_Scheutz_Ruiter:
+  x: 6.8375
+  y: 5.6177
 
-foyer_sitting_area:
-  x: -1.15999901432
-  y: 2.54972371606
+206_Akitaya:
+  x: 10.4683
+  y: 6.8102
 
-hall1_adjacent_foyer:
-  x: 1.02846898275
-  y: 6.21969908597
+207_Vu:
+  x: 11.5023
+  y: 5.6684
 
-hall1_adjacent_rm204_kitchenette:
-  x: 5.38917623316
-  y: 6.25605316313
+208_Koomson:
+  x: 13.7424
+  y: 5.6023
 
-hall1_adjacent_rm209_conference_room:
-  x: 13.4319031612
-  y: 6.08059150836
+209_Conference_Right:
+  x: 13.4468
+  y: 6.7859
 
-hall1_adjacent_rm212_collab_room:
-  x: 21.0895854862
-  y: 6.0011872162
+209_Conference_Left:
+  x: 13.4467
+  Y: 14.0192
 
-hall1_adjacent_rm213_prof_jivko_sinapov:
-  x: 23.0637321946
-  y: 5.78044253952
+210_Hughes:
+  x: 17.5916
+  y: 5.3893
 
-hall1_adjacent_rm215_prof_rob_jacob:
-  x: 25.6360095227
-  y: 5.98617946751
+211_Foster:
+  x: 18.8548
+  y: 5.2866
 
-hall2_adjacent_elevator:
-  x: -1.7565978707
-  y: 13.9588933665
+212_Collab_Right:
+  x: 21.0819
+  y: 6.6649
 
-hall2_adjacent_hall3_and_kitchenette:
-  x: 5.57928385656
-  y: 13.9321390831
+212_Collab_Left:
+  x: 21.9039
+  y: 13.8671
 
-hall2_adjacent_men_restroom:
-  x: 29.6786247035
-  y: 14.0964120614
+213_Sinapov:
+  x: 23.0076
+  y: 5.6336
 
-hall2_adjacent_rm212_collaboration_room:
-  x: 21.9039601356
-  y: 13.8670889491
+214_Mendelsohn:
+  x: 24.6323
+  y: 5.4744
 
-hall2_adjacent_rm226_graduate_office:
-  x: 15.2735710501
-  y: 14.0124343901
+215_Jacob:
+  x: 26.4302
+  y: 6.0530
 
-hall2_adjacent_rm239_prof_diane_souvaine:
-  x: -7.48538300739
-  y: 14.9262725414
+217_Janitor_Closet:
+  x: 27.7618
+  y: 12.3550
 
-hall2_adjacent_women_restroom:
-  x: 26.0829791464
-  y: 14.1902223872
+Womens_Bathroom:
+  x: 26.0830
+  y: 14.1902
 
-hall3_adjacent_hall2:
-  x: 5.63635037067
-  y: 15.9575248473
+Mens_Bathroom:
+  x: 29.6786
+  y: 14.096
 
-hall3_adjacent_rm227_simulation_lab:
-  x: 6.3625647621
-  y: 37.9416160591
+220_Afsar:
+  x: 26.2534
+  y: 14.5457
 
-hall3_adjacent_rm230_prof_roni_khardon:
-  x: 5.57176135127
-  y: 22.5141656783
+221_Edwards:
+  x: 24.9361
+  y: 14.4779
 
-hall3_adjacent_rm236_dean_dr_karen_panetta:
-  x: 5.85080682644
-  y: 32.4480957561
+222_Ramsey:
+  x: 19.3969
+  y: 14.4991
 
-rm212_collaboration_room_adjacent_hall1:
-  x: 21.170523141
-  y: 8.0662080012
+224_Sheldon:
+  x: 17.6041
+  y: 14.0903
 
-rm212_collaboration_room_adjacent_hall2:
-  x: 21.6652247305
-  y: 12.0666929833
+226_Graduate_Offices:
+  x: 15.2736
+  y: 14.0124
 
-rm226_graduate_office_adjacent_hall2:
-  x: 15.1729078754
-  y: 15.9476761634
+228_SinapovLab_ProfKorman:
+  x: 12.3666
+  y: 21.3270
 
-rm226_graduate_office_adjacent_rm228_robotics_lab:
-  x: 14.4842745708
-  y: 20.5163510362
+235B_Offices:
+  x: 10.8759
+  y: 13.4052
 
-rm228_robotics_lab_adjacent_rm226_graduate_office:
-  x: 12.3665883152
-  y: 21.3269766858
+233_Closet:
+  x: 2.8814
+  y: 14.2013
+
+250_Graduate_Offices:
+  x: 2.8814
+  y: 13.1102
+
+235A_Hempstead:
+  x: -3.7589
+  y: 14.2762
+
+219_Wellness_Room:
+  x: -4.5289
+  y: 13.3898
+
+237_Guyer:
+  x: -4.9134
+  y: 14.2814
+
+241_Landau:
+  x: -7.8610
+  y: 13.8778
+
+239_Souvaine:
+  x: -7.4854
+  y: 14.9263
+
